--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -1,3 +1,7 @@
+:root {
+  --md-default-fg-color--light: #404040;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -27,11 +31,14 @@ p {
   line-height: 24px;
   margin: 0;
   font-size: 16px;
-  margin-bottom: 10px;
+  margin-bottom: 9px;
+  margin-top: 9px;
 }
 
-h5, h4, h3, h2 {
-    margin: 18px 0 8px 0;
+h5, h4, h3, h2, h1 {
+  margin: 18px 0 8px 0 !important;
+  font-weight: 700 !important;
+  color: var(--md-default-fg-color--light);
 }
 
 code {
