Change admonition background and border
Also changed an admonition in index to use a supported type.

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -53,3 +53,18 @@ img {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+/* Admonitions */
+
+.admonition {
+  border-radius: 0px !important;
+  border-color: transparent !important;
+}
+
+.admonition.info {
+  background-color: #e7f2fa;
+}
+
+.admonition.warning {
+  background-color: #ffedcc;
+}
