Change header background color to a more Pip one

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -2,6 +2,7 @@
   --md-default-fg-color--light: #404040;
   --md-code-hl-function-color: #7a008f;
   --md-default-bg-color: #f2f2f2;
+  --md-primary-fg-color: #5858ad;
 }
 
 body {
