--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -15,10 +15,11 @@ body {
 
 .md-header__button.md-logo img {
   height: 2rem !important; /* Header itself has no height set; it's dictated by the logo */
+  margin: 5px 0 !important;
 }
 
 .md-header__button {
-  margin: 0 0 0 5px !important;
+  margin: 0 0 0 0px !important;
   padding: 0 !important;
 }
 
@@ -75,8 +76,8 @@ code {
 }
 
 img {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 /* Admonitions */
