--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -3,6 +3,7 @@
   --md-code-hl-function-color: #7a008f;
   --md-default-bg-color: #f2f2f2;
   --md-primary-fg-color: #5858ad;
+  --tpw-font-size: .75rem;
 }
 
 body {
@@ -11,6 +12,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.md-typeset {
+  font-size: var(--tpw-font-size) !important;
+}
+
+.md-typeset ol li, .md-typeset ul li {
+  margin-bottom: 4px !important;
 }
 
 .md-header__button.md-logo img {
@@ -51,9 +60,9 @@ code {
 p {
   line-height: 24px;
   margin: 0;
-  font-size: 16px;
   margin-bottom: 9px;
   margin-top: 9px;
+  font-size: var(--tpw-font-size) !important;
 }
 
 h5, h4, h3, h2, h1 {
@@ -93,6 +102,10 @@ img {
 
 .admonition.warning {
   background-color: #ffedcc;
+}
+
+.admonition {
+  font-size: var(--tpw-font-size) !important;
 }
 
 /* Content area */
