--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -14,6 +14,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Center content if the width is too low for the table of contents to display */
+@media screen and (max-width: 60em) {
+  .md-main__inner.md-grid {
+    justify-content: center !important;
+  }
+}
+
 .md-typeset {
   font-size: var(--tpw-font-size) !important;
 }
