Underline links in content area

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -105,6 +105,11 @@ summary {
   user-select: none;
 }
 
+/* Underline links in main content section */
+.md-content a {
+  text-decoration: underline;
+}
+
 /* Admonitions */
 
 .admonition {
